<resources>
    <string name="app_name">Edible Landscapes</string>
    <string name="resources">Resources</string>
    <string name="asm_name">Associated Students of Madison</string>
    <string name="asm_info">ASM recently set in motion a food pantry for students of UW-Madison.
        The food pantry is located on 333 East Campus Mall, on the 4th floor of Student Activity
        Center. ASM accepts donations as well.</string>
    <string name="fhking">F.H. King</string>
    <string name="fhking_info">F.H. King student organization has a 2-acre farm and a roof-top garden
        which produces more than 5000 pounds of vegetables every growing season.These vegetables
        are handed out to students from May to October every Friday at 1pm at East Campus Mall.</string>
    <string name="growing_power">Growing Power</string>
    <string name="grow_info">Growing Power Madison is actively participating in providing food
        security and accessibility for the community members of South Madison. Additionally, this is
        a great educational resource for those interested in urban gardening. </string>
    <string name="farmers_market">Local Farmer\'s Market</string>
    <string name="farmer_info">Check out any of Madison\'s local farmer\'s markets: Dane County
    Farmer\'s Market, Monroe Street Farmer's Market, and Eastside Farmer's Market.</string>
    <string name= "eagle_heights">Eagle Heights Community Gardens</string>
    <string name= "eagle_info">Almost a mile west of the campus, bounded by the Lakeshore Nature
    Preserve, is a beautiful valley of community gardens. Members of the Madison community,
    along with UW horticulture researchers and F.H. King student organization have their own
    share of land on which they garden and enjoy the fruit of their labor. </string>


    <string name="Contacts">Contacts</string>
    <string name="MDCFRGHeading">Madison &amp; Dane County Food Resource</string>
    <string name="MDCFRGAddress">2300 South Park Street\nMadison, WI 53713</string>
    <string name="MDCFRGPhone">Phone (608)267-1111</string>
    <string name="MDCFRGTTY">TTY/Textnet (866)704-2312</string>
    <string name="MDCFRGSite">www.publichealthmdc.com</string>
    <string name="SFPHeading">Summer Food Program/ Madison</string>
    <string name="SFPDesc">Free breakfast and lunch at various locations throughout Dane County for children under the age of 18 years during the months of June and July.</string>
    <string name="SFPPhone">Phone (608)204-4007</string>
    <string name="SFSHeading">School Food Service/ Madison</string>
    <string name="SFSDesc">Free and reduced priced breakfast and lunch.  Contact your child’s school for an application and information.</string>
    <string name="SFSPhone">Phone (608)204-4001</string>
    <string name="GenHeading">For more information, contact us at:</string>
    <string name="GenEmail">ediblelandscapesuw@gmail.com</string>
    <string name="ASMHeading">Associated Students of Madison (ASM)</string>
    <string name="ASMAddress">333 east campus mall, 4th floor\nMadison, WI 53715</string>
    <string name="Home">Home</string>
    <string name="search_hint">Enter a food or place</string>
    <string name="cole_location_button">coleLocationButton</string>
    <string name="sellery_location_button">selleryLocationButton</string>
    <string name="smith_location_button">smithLocationButton</string>
    <string name="beanRecipes"><a href="https://bit.ly/2qQxPYx">Green Bean Recipes</a></string>
    <string name="beetRecipes"><a href="https://bit.ly/2r0FnY6">Beet Recipes</a></string>
    <string name="radishRecipes"><a href="https://bit.ly/2HXYDNW">Radish Recipes</a></string>
    <string name="carrotRecipes"><a href="https://bit.ly/2qZXuNW">Carrot Recipes</a></string>
    <string name="kaleRecipes"><a href="https://bit.ly/2HmM9Cn">Kale Recipes</a></string>
    <string name="chardRecipes"><a href="https://bit.ly/2HmM8hN">Chard Recipes</a></string>
    <string name="basilRecipes"><a href="https://bit.ly/2vxXDO1">Basil Recipes</a></string>
    <string name="peasRecipes"><a href="https://bit.ly/2JsEGhU">Peas Recipes</a></string>
    <string name="borageRecipes"><a href="https://bit.ly/2Khz7DU">Borage Recipes</a></string>
    <string name="coleMapsLink"><a href="https://goo.gl/maps/erUFipsUcb52">625 Elm Dr, Madison, WI 53706</a></string>
    <string name="selleryMapsLink"><a href="https://goo.gl/maps/upb6iRmogz42">821 W Johnson St, Madison, WI 53706</a></string>
    <string name="smithMapsLink"><a href="https://goo.gl/maps/MKa4oGJMga72">35 N Park St, Madison, WI 53715</a></string>
</resources>
