<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationList">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:scrollbarStyle="insideOverlay"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/cole_location_button"
                android:onClick="goColeLocation"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cole_hall_image1" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/sellery_location_button"
                android:onClick="goSelleryLocation"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/sellery_hall_image2" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/smith_location_button"
                android:onClick="goSmithLocation"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/smith_hall_image1" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>