<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxHeight="600dp"
    android:maxWidth="500dp"
    android:minHeight="0dp"
    android:minWidth="0dp"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/res_title"
        android:layout_width="213dp"
        android:layout_height="46dp"
        android:text="@string/resources"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asm_title"
        android:layout_width="308dp"
        android:layout_height="29dp"
        android:layout_marginTop="84dp"
        android:text="@string/asm_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/asm"
        android:layout_width="248dp"
        android:layout_height="84dp"
        android:layout_marginTop="104dp"
        android:text="@string/asm_info"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fhking_info"
        android:layout_width="251dp"
        android:layout_height="90dp"
        android:layout_marginBottom="208dp"
        android:text="@string/fhking_info"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/asm_image"
        android:layout_width="85dp"
        android:layout_height="81dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/asm_uw"
        android:contentDescription="@string/asm_name"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asm_uw" />

    <ImageButton
        android:id="@+id/fhking_image"
        android:layout_width="85dp"
        android:layout_height="81dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/fhking_uw"
        android:contentDescription="@string/fhking"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fhking_uw" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="308dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/fhking"
        android:text="@string/fhking"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/fhking_info"
        app:layout_constraintEnd_toEndOf="@+id/fhking_info"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asm_image"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>