<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColeHallLocation">

    <ImageView
        android:id="@+id/locationImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cole_hall_image1" />

    <TextView
        android:id="@+id/coleLocationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Cole"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="285dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Address:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/addressDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="There are three raised beds south of Cole Residence Hall, next to the tennis courts"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressTitle" />

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mapsLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/coleMapsLink"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressDescription" />

            <TextView
                android:id="@+id/foodsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Foods:"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapsLink" />

            <TextView
                android:id="@+id/peas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recipesPeas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/peasRecipes"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/borage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recipesBorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/borageRecipes"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/beans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recipesBeans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="32dp"
                android:paddingBottom="30dp"
                android:text="@string/beanRecipes"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>